--- a/artofvisualdata/index.html
+++ b/artofvisualdata/index.html
@@ -494,7 +494,9 @@
       <article class="videoCaptionCombination1 fadeinup">
         <div class="imageVer1">
           <video aria-label="The landing page of the article. Summary of key points, highlighting Sub-Saharan Africa's lag behind the world average." autoplay muted loop playsinline>
+            <source src="https://richard-lau.b-cdn.net/aovd/compressed_animation.webm" type="video/webm">
             <source src="https://dl.dropboxusercontent.com/scl/fi/dw57ko91xz0a219t1vwpn/compressed_animation.mp4?rlkey=nyils2suijqrpxvba83fn1bya&st=w3o0x8qg" type="video/mp4">
+            <source src="https://vz-ff393fa5-912.b-cdn.net/c7c88e30-d2a0-45b0-8cd6-1930ec00f0f8/play_720p.mp4" type="video/mp4">            
           </video>
         </div>
         <aside class="sideBoxFinal" role="complementary" aria-labelledby="articleLandingPageHeading">
@@ -514,7 +516,9 @@
         </aside>
         <div class="imageVer1">
           <video aria-label="Detailed datasets comparing multiple SDGs. Text of key points in the top right, chatbot implementation in the bottom right, metric comparison on the right, interactive graph in the center-left." autoplay muted loop playsinline>
+            <source src="https://richard-lau.b-cdn.net/aovd/detailedGraph.webm" type="video/webm">
             <source src="https://dl.dropboxusercontent.com/scl/fi/qke6qhej6rqfl4ifs7xtt/detailedGraph.mp4?rlkey=p2sg16qpybxby0po9a2m8hmjy&st=wlsd7fzq" type="video/mp4">
+            <source src="https://vz-ff393fa5-912.b-cdn.net/79f3eae7-da72-45f1-b4eb-5e6182d3d04f/play_720p.mp4" type="video/mp4">
           </video>
         </div>
       </article>        
@@ -524,7 +528,10 @@
 
     <section class="finalDesignImages mobileFinals">
       <video aria-label="Desktop Mockup of Art of Visual Data's homepage." class="mockupImage fadeinup" autoplay muted loop playsinline>
-        <source src="https://dl.dropboxusercontent.com/scl/fi/y1w3c3i9j4l52jrnzc6mh/homePageMockup.mp4?rlkey=gybzsfu61upzaqydcbquip8b6&st=ho6cv7bz" type="video/mp4">
+        <source src="https://richard-lau.b-cdn.net/aovd/homePageMockup-compressed.webm" type="video/webm">       
+        <source src="https://dl.dropboxusercontent.com/scl/fi/y1w3c3i9j4l52jrnzc6mh/homePageMockup.mp4?rlkey=gybzsfu61upzaqydcbquip8b6" type="video/mp4">
+        <source src="caseStudy1/homePageMockup.mp4" type="video/mp4">
+        <source src="https://vz-ff393fa5-912.b-cdn.net/e5894b5d-0d5d-48ef-a220-a27348670fb6/play_720p.mp4" type="video/mp4"> 
       </video>
       
       <article class="videoCaptionCombination1 fadeinup">
@@ -536,7 +543,9 @@
         </aside>
         <div class="imageVer1">
           <video aria-label="The landing page of the article. Summary of key points, highlighting Sub-Saharan Africa's lag behind the world average." autoplay muted loop playsinline>
+            <source src="https://richard-lau.b-cdn.net/aovd/compressed_animation.webm" type="video/webm">
             <source src="https://dl.dropboxusercontent.com/scl/fi/dw57ko91xz0a219t1vwpn/compressed_animation.mp4?rlkey=nyils2suijqrpxvba83fn1bya&st=w3o0x8qg" type="video/mp4">
+            <source src="https://vz-ff393fa5-912.b-cdn.net/c7c88e30-d2a0-45b0-8cd6-1930ec00f0f8/play_720p.mp4" type="video/mp4">
           </video>
         </div>
       </article>
@@ -550,7 +559,9 @@
         </aside>
         <div class="imageVer1">
           <video aria-label="Detailed datasets comparing multiple SDGs. Text of key points in the top right, chatbot implementation in the bottom right, metric comparison on the right, interactive graph in the center-left." autoplay muted loop playsinline>
-            <source src="https://dl.dropboxusercontent.com/scl/fi/qke6qhej6rqfl4ifs7xtt/detailedGraph.mp4?rlkey=p2sg16qpybxby0po9a2m8hmjy&st=wlsd7fzq" type="video/mp4">
+              <source src="https://richard-lau.b-cdn.net/aovd/detailedGraph.webm" type="video/webm">
+              <source src="https://dl.dropboxusercontent.com/scl/fi/qke6qhej6rqfl4ifs7xtt/detailedGraph.mp4?rlkey=p2sg16qpybxby0po9a2m8hmjy&st=wlsd7fzq" type="video/mp4">
+              <source src="https://vz-ff393fa5-912.b-cdn.net/79f3eae7-da72-45f1-b4eb-5e6182d3d04f/play_720p.mp4" type="video/mp4">
           </video>
         </div>                
       </article>        
@@ -560,13 +571,20 @@
 
     <figure class="customGrid desktopFinals fadeinup">
         <video class="gridItem fadeinup" aria-label="Navigation bar opening and closing, transforming 3-line hamburger icon into 4-line bar graph when hovered. When clicked lines transform into an X." autoplay muted loop playsinline>
+          <source src="https://richard-lau.b-cdn.net/aovd/interactionAmockup.webm" type="video/webm">
+          <source src="https://vz-ff393fa5-912.b-cdn.net/3da491e2-1e64-4320-affb-d61e4690c3da/play_720p.mp4" type="video/mp4">
           <source src="https://dl.dropboxusercontent.com/scl/fi/sco14w2al1by24he9q939/interactionAmockup.mp4?rlkey=ncy4ilqlowqxbwmd40mko2bkf&st=37fntiug" type="video/mp4">
         </video>
         <video class="gridItem fadeinup" aria-label="Hover effects over sharing elements, slightly tilting icons." autoplay muted loop playsinline>
+          <source src="https://richard-lau.b-cdn.net/aovd/interactionB-compressed.webm" type="video/webm">
           <source src="https://dl.dropboxusercontent.com/scl/fi/6d9532jta13z0yj57hgea/interactionB.mp4?rlkey=zhazv1uj3t3svr7ge6c37fvk2&st=ypuptjp0" type="video/mp4">
+          <source src="https://vz-ff393fa5-912.b-cdn.net/2f66e11e-154e-4291-a095-7c09c22e8a4c/play_480p.mp4" type="video/mp4">
         </video>
+        <!-- make for both versions, update video links-->
         <video class="gridItem fadeinup" aria-label="Hover effect over bubble chart's bubbles. Specific data is presented such as pie chart, percentage, name, and date." autoplay muted loop playsinline>
+          <source src="https://richard-lau.b-cdn.net/aovd/interactionC-compressedFile.webm" type="video/webm">     
           <source src="https://dl.dropboxusercontent.com/scl/fi/4mmemsu4fie4oih98cgaj/interactionC.mp4?rlkey=b1i4uhi4j4r1ryhqfvilbeahq&st=l4i2jgb9" type="video/mp4">
+          <source src="https://vz-ff393fa5-912.b-cdn.net/39608c3e-33c7-45fc-ac73-58314ac74514/play_720p.mp4" type="video/mp4">     
         </video>
     </figure>
 
@@ -575,13 +593,19 @@
     <figure class="customGridMobile mobileFinals fadeinup">
       <div class="sectionDivider"></div>
         <video class="gridItem fadeinup" aria-label="Navigation bar opening and closing, transforming 3-line hamburger icon into 4-line bar graph when hovered. When clicked lines transform into an X." autoplay muted loop playsinline>
+          <source src="https://richard-lau.b-cdn.net/aovd/interactionAmockup.webm" type="video/webm">
+          <source src="https://vz-ff393fa5-912.b-cdn.net/3da491e2-1e64-4320-affb-d61e4690c3da/play_720p.mp4" type="video/mp4">
           <source src="https://dl.dropboxusercontent.com/scl/fi/sco14w2al1by24he9q939/interactionAmockup.mp4?rlkey=ncy4ilqlowqxbwmd40mko2bkf&st=37fntiug" type="video/mp4">
         </video>
         <video class="gridItem fadeinup" aria-label="Hover effects over sharing elements, slightly tilting icons." autoplay muted loop playsinline>
+          <source src="https://richard-lau.b-cdn.net/aovd/interactionB-compressed.webm" type="video/webm">
           <source src="https://dl.dropboxusercontent.com/scl/fi/6d9532jta13z0yj57hgea/interactionB.mp4?rlkey=zhazv1uj3t3svr7ge6c37fvk2&st=ypuptjp0" type="video/mp4">
+          <source src="https://vz-ff393fa5-912.b-cdn.net/2f66e11e-154e-4291-a095-7c09c22e8a4c/play_480p.mp4" type="video/mp4">
         </video>
         <video class="gridItem fadeinup" aria-label="Hover effect over bubble chart's bubbles. Specific data is presented such as pie chart, percentage, name, and date." autoplay muted loop playsinline>
+          <source src="https://richard-lau.b-cdn.net/aovd/interactionC-compressedFile.webm" type="video/webm">     
           <source src="https://dl.dropboxusercontent.com/scl/fi/4mmemsu4fie4oih98cgaj/interactionC.mp4?rlkey=b1i4uhi4j4r1ryhqfvilbeahq&st=l4i2jgb9" type="video/mp4">
+          <source src="https://vz-ff393fa5-912.b-cdn.net/39608c3e-33c7-45fc-ac73-58314ac74514/play_720p.mp4" type="video/mp4">     
         </video>
     </figure>    
 
