--- a/secretsanta/index.html
+++ b/secretsanta/index.html
@@ -24,7 +24,7 @@
 
 <main>
     <section class="hero">
-        <header>
+        <header class="text-container">
             <h1>Welcome to Richy's Wishlist :]</h1>
             <p>Hey what are you doing here? It's like a year away from winter...</p>
             <p class="italics">Last Updated 2026/01/18 @ 2:07AM</p>        
