--- a/yorku/thea3135/projects/module11/index.html
+++ b/yorku/thea3135/projects/module11/index.html
@@ -16,7 +16,7 @@
     <section class="hero">
         <header>
             <h1>Module 011: Introduction to the Rhetoric of Publicity and Marketing</h1>
-            <p>A breakdown on York's e-class assignment portal.</p>        
+            <p>A press release for the Design Educators Conference.</p>        
         </header>
         <div id="line"></div>
     </section>
