Update link for collection to new URL and mark as WIP

--- a/fishbones/index.html
+++ b/fishbones/index.html
@@ -118,7 +118,7 @@
         </div>
 
         <p class="halyardLight regularType">
-          <a href="https://www.richardlau.ca/library-of-lau" class="gray">View the collection (Unavailable)</a>
+          <a href="https://libraryoflau.ca/home/" class="gray" target="_blank">View the collection (WIP)</a>
         </p>
       </article>
     </section>
