Update description for organization tools item in wishlist

--- a/secretsanta/index.html
+++ b/secretsanta/index.html
@@ -67,7 +67,7 @@
         <a class="item" href="" target="_blank" rel="noopener">
             <img class="thumbnail" src="https://i.postimg.cc/XqpZNkcC/image.png">            
             <h2>ORGANIZATION TOOLS</h2>
-            <h4 class="desc">I need things to organize whatever around my room such as drawer dividers/containers.</h4>
+            <h4 class="desc">Stuff like vertical stacking/organization put on desk thing. Monitor stand (im using books rn). Minimal.</h4>
             <h3 class="moneyIcon">$$</h3>
         </a>
 
