Update wishlist item: replace cigarette bubble blower with a mouse

--- a/secretsanta/index.html
+++ b/secretsanta/index.html
@@ -50,10 +50,10 @@
             <h3 class="moneyIcon">$$</h3>
         </a>
         
-        <a class="item" href="https://www.aliexpress.com/item/1005010503991115.html?channel=twinner " target="_blank" rel="noopener">
-            <img class="thumbnail" src="https://ae-pic-a1.aliexpress-media.com/kf/S633ebab1aec949d4a620d93b5fe4a39cq.jpg_960x960q75.jpg_.avif">
-            <h2>CIGARETTE BUBBLE BLOWER</h2>
-            <h4 class="desc">I like my random junk :]</h4>
+        <a class="item" href="" target="_blank" rel="noopener">
+            <img class="thumbnail" src="https://m.media-amazon.com/images/I/61q5w-9BXfL._AC_UF894,1000_QL80_.jpg">
+            <h2>A Mouse</h2>
+            <h4 class="desc">I need wireless for school so I don't have to unplug the one at my house.</h4>
             <h3 class="moneyIcon">$</h3>
         </a>        
 
