--- a/secretsanta/index.html
+++ b/secretsanta/index.html
@@ -26,8 +26,8 @@
     <section class="hero">
         <header class="text-container">
             <h1>Welcome to Richy's Wishlist :]</h1>
-            <p>Hey what are you doing here? It's like a year away from winter...</p>
-            <p class="italics">Last Updated 2026/01/18 @ 2:07AM</p>        
+            <p>Hey what are you doing here? JINNY I KNOW YOU'RE HERE...</p>
+            <p class="italics">Last Updated 2026/02/08 @ 3:11AM</p>        
         </header>
     </section>
 
@@ -92,11 +92,11 @@
             <h3 class="moneyIcon">$ ?</h3>
         </a>          
 
-        <a class="item" href="https://shop-t1-na.gg/products/vandy-varsity-green" target="_blank" rel="noopener">
-            <img class="thumbnail" src="https://shop-t1-na.gg/cdn/shop/files/Faker-x-VTP-Varsity-Front_600x.jpg?v=1718992483">
-            <h2>T1 VARSITY JACKET</h2>
+        <a class="item" href="https://losratones.shop/products/stockholm-signature-t-shirt?variant=56666762740057" target="_blank" rel="noopener">
+            <img class="thumbnail" src="https://losratones.shop/cdn/shop/files/67fb15bb-LR_STOCKHOLM_TEE_BACK.webp?v=1763557162&width=1200">
+            <h2>LOSSSS RATONESSSS (merch)</h2>
             <h4 class="desc">"Dear Secret Santa"</h4>
-            <h3 class="moneyIcon">This is a joke.</h3>
+            <h3 class="moneyIcon">$$$$$$$</h3>
         </a>
 
         
