--- a/secretsanta/index.html
+++ b/secretsanta/index.html
@@ -27,7 +27,7 @@
         <header class="text-container">
             <h1>Welcome to Richy's Wishlist :]</h1>
             <p>Hey what are you doing here? JINNY I KNOW YOU'RE HERE...</p>
-            <p class="italics">Last Updated 2026/02/08 @ 3:11AM</p>        
+            <p class="italics">Last Updated 2026/02/11 @ 1:54AM</p>        
         </header>
     </section>
 
@@ -48,6 +48,13 @@
             <h2>BATH AND BODY WORKS</h2>
             <h4 class="desc">Love their 3-wick candles.</h4>
             <h3 class="moneyIcon">$$</h3>
+        </a>
+
+        <a class="item" href="https://writeo-store.com/" target="_blank" rel="noopener">
+            <img class="thumbnail" src="https://i.postimg.cc/K8LrRRkn/image.png">            
+            <h2>Whiteboard (Stick on wall)</h2>
+            <h4 class="desc">Good markers/eraser would be cool too :D</h4>
+            <h3 class="moneyIcon">$$$$</h3>
         </a>
         
         <a class="item" href="" target="_blank" rel="noopener">
