--- a/secretsanta/index.html
+++ b/secretsanta/index.html
@@ -50,11 +50,11 @@
             <h3 class="moneyIcon">$$</h3>
         </a>
 
-        <a class="item" href="https://writeo-store.com/" target="_blank" rel="noopener">
-            <img class="thumbnail" src="https://i.postimg.cc/K8LrRRkn/image.png">            
-            <h2>Whiteboard (Stick on wall)</h2>
-            <h4 class="desc">Good markers/eraser would be cool too :D</h4>
-            <h3 class="moneyIcon">$$$$</h3>
+        <a class="item" href="https://a.co/d/0eMXTho3" target="_blank" rel="noopener">
+            <img class="thumbnail" src="https://m.media-amazon.com/images/I/81YCAeYmqLL._AC_SL1500_.jpg">            
+            <h2>Portable Monitor</h2>
+            <h4 class="desc">A monitor I can bring around for my laptop! </h4>
+            <h3 class="moneyIcon">$$$$$$$$</h3>
         </a>
         
         <a class="item" href="" target="_blank" rel="noopener">
