--- a/secretsanta/index.html
+++ b/secretsanta/index.html
@@ -26,8 +26,8 @@
     <section class="hero">
         <header class="text-container">
             <h1>Welcome to Richy's Wishlist :]</h1>
-            <p>Hey what are you doing here? JINNY I KNOW YOU'RE HERE...</p>
-            <p class="italics">Last Updated 2026/02/11 @ 1:54AM</p>        
+            <p>bro get out...</p>
+            <p class="italics">Last Updated 2026/02/26 @ 2:58PM</p>        
         </header>
     </section>
 
