--- a/yorku/thea3135/projects/program-project/index.html
+++ b/yorku/thea3135/projects/program-project/index.html
@@ -30,13 +30,15 @@
 
         <div class="pgTxt">
 
-            Just click the link, download the PDF, and print. It is formatted as booklet, ready for print. <br> 
-            <div aria-checked="bold">Booklet print-ready formatted pdf downloadable<a href="https://richardlau.ca/yorku/thea3135/program-project/program-booklet">here</a></div>
-
-
+            Just click the link, download the PDF, and print. It is formatted as booklet, ready for print. <br></br>
+            <div aria-checked="bold">Booklet print-ready formatted pdf downloadable <a href="https://richardlau.ca/yorku/thea3135/projects/program-project/program-booklet">here</a></div>
             <br></br>
     
+            This is the InDesign download link. <br></br>
+            <div aria-checked="bold">InDesign File downloadable <a href="https://richardlau.ca/yorku/thea3135/projects/program-project/program.indd">here</a></div>
             <br></br>
+
+
 </div>
     </section>
 </main>    
