--- a/yorku/thea3135/projects/program-project/index.html
+++ b/yorku/thea3135/projects/program-project/index.html
@@ -31,8 +31,7 @@
         <div class="pgTxt">
 
             Just click the link, download the PDF, and print. It is formatted as booklet, ready for print. <br></br>
-            <div aria-checked="bold">Booklet print-ready formatted pdf downloadable <a href="https://richardlau.ca/yorku/thea3135/projects/program-project/program-booklet">here</a></div>
-            <br></br>
+            <div aria-checked="bold">Booklet print-ready formatted pdf downloadable <a href="https://richardlau.ca/yorku/thea3135/projects/program-project/program-booklet.pdf">here</a></div>
     
             This is the InDesign download link. <br></br>
             <div aria-checked="bold">InDesign File downloadable <a href="https://richardlau.ca/yorku/thea3135/projects/program-project/program.indd">here</a></div>
