--- a/yorku/thea3135/projects/program-project/index.html
+++ b/yorku/thea3135/projects/program-project/index.html
@@ -30,7 +30,7 @@
 
         <div class="pgTxt">
 
-            Just click the link, download the PDF, and print double-sided on short edge (This ensures the back side is not upside). It is formatted as booklet, so no reformatting is needed. Bind together with a saddle stitch. <br></br>
+            Just click the link, download the PDF, and print double-sided on long edge (This ensures the back side is not upside). It is formatted as booklet, so no reformatting is needed. Bind together with a saddle stitch. <br></br>
             <div aria-checked="bold">Booklet print-ready formatted pdf downloadable <a href="https://richardlau.ca/yorku/thea3135/projects/program-project/program_booklet.pdf">here</a></div>
     <br>
             This is the InDesign download link. <br></br>
